--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
 @import url(./ui-components.css);
 
 body {
+    width: 100%;
     background-color: #E5E7EB;
     font-family: 'Formular';
     color: var(--gray-900);
@@ -12,6 +13,9 @@ body {
 a {
    color: var(--gray-900);
    color: inherit;
+}
+fieldset {
+    border: none;
 }
 input {
     font-family: 'Formular';
@@ -31,7 +35,7 @@ button {
 .header {
     height: 192px;
     background-color: #F9FAFB;
-    border-radius: 16px;
+    border-radius: 0  0 16px 16px;
     padding-top: 24px;
     padding-bottom: 24px; 
 }
@@ -73,6 +77,9 @@ button {
 .header__burger {
     display: none;
 }
+.header__mobil-phon {
+    display: none;
+}
 .header__menu {
     display: flex;
     justify-content: space-between;
@@ -102,10 +109,9 @@ button {
 }
 @media (max-width: 1535px) {
     .header {
-        max-width: 1535px;
-        min-width: 1024px;
         height: 262px;
-        padding: 24px 128px;
+        padding-top: 24px;
+        padding-bottom: 24px;
     }
     .header__text {
         display: none;
@@ -137,12 +143,11 @@ button {
        text-align: center;
     }
 }
-@media (max-width: 1023px) {
+@media (max-width: 1024px) {
     .header {
-        max-width: 1023px;
-        min-width: 100%;
         height: 90px;
-        padding: 8px 60px;
+        padding-top: 8px;
+        padding-bottom: 8px;
         position: relative;
         z-index: 100;    
     }
@@ -162,12 +167,12 @@ button {
         display: flex;
         align-items: center;
     }
+    .header__connection-phone,
     .header__connection-phone {
         font-size: 20px;
         line-height: 28px;
         margin-right:  16px;
     }
-
     .header__burger {
         position: relative;
         display: flex;
@@ -233,6 +238,49 @@ button {
         
     }
     
+}
+@media (max-width: 758px) {
+    .header.active {
+        min-height: 100vh;
+    }
+    .header__menu,
+    .header__menu-list,
+    .header__infotext {
+        flex-direction: column;
+    }
+    .header__menu {
+        padding: 24px;
+    }
+    .header__menu-list {
+        align-items: center;
+    }
+    .header__menu-item {
+        margin-bottom: 12px;
+        align-items: center;
+    }
+    .header__connection {
+        display: none;
+    }
+    .header.active .header__mobil-phon {
+        display: block;
+        text-align: center;
+        font-weight: 900;
+        font-size: 20px;
+        line-height: 28px;
+        margin-bottom: 16px;
+        
+    }
+    .header__infotext {
+        align-items: center;
+        padding: 0;
+    }
+    .header__infotext-item {
+        width: 90%;
+        margin-bottom: 15px;
+    }
+    .header__infotext-item span {
+        text-wrap: nowrap;
+    }
 }
 
 
