--- a/css/index.css
+++ b/css/index.css
@@ -754,7 +754,7 @@ button {
 .questions__wrap {
     border-radius: 16px;
     background-color: var(--gray-50);
-    padding: 64px 0;
+    padding: 64px 10px;
 }
 .questions__title {
     text-align: center;
@@ -765,7 +765,7 @@ button {
 }
 .questions__form {
     margin: 0 auto;
-    width: 498px;
+    max-width: 498px;
 }
 .questions__form fieldset {
     display: flex;
@@ -775,6 +775,7 @@ button {
 }
 .questions__form textarea,
 .questions__form input {
+    flex-grow: 1;
     padding: 12px;
     outline-color: var(--gray-400);
     border: 2px solid var(--gray-900);
@@ -794,6 +795,16 @@ button {
     margin-top: 20px;
     width: 100%;
     height: 44px;
+}
+@media (max-width: 650px) {
+    .questions__wrap {
+        padding: 36px 10px;
+    }
+    .questions__title {
+        font-size: 22px;
+        line-height: 26px;
+        margin-bottom: 24px;
+    }
 }
 
 /*---Footer---*/
