--- a/css/index.css
+++ b/css/index.css
@@ -151,8 +151,7 @@ button {
         z-index: 100;    
     }
     .header.active { 
-        border-radius: 0;
-        max-height: 100%;
+        height: 100%;
         outline: 100vh solid rgba(63, 63, 63, 0.596);  
         overflow-y: scroll; 
     }
@@ -243,6 +242,7 @@ button {
 @media (max-width: 758px) {
     .header.active {
         min-height: 100vh;
+        border-radius: 0;
     }
     .header__menu,
     .header__menu-list,
