--- a/css/index.css
+++ b/css/index.css
@@ -640,6 +640,8 @@ button {
 .carousel-text-items__btn-previous > img,
 .carousel-text-items__btn-next > img {
     pointer-events: none;
+    min-width: 100%;
+    height: 100%;
 }
 .carousel-text-items__btn-previous {
     margin-left: 25px;
@@ -685,19 +687,9 @@ button {
     padding: 32px 43px;
     border-radius: 16px;
     background-color: var(--gray-50);
-    scroll-behavior: smooth;
 }
 .carousel-text-items__item-wrap:last-child {
     margin-right: 0;
-}
-.carousel-text-items__item-wrap:hover {
-    height: 100%;
-    
-}
-.carousel-text-items__item-wrap:hover > p {
-    overflow: visible;
-    text-overflow: clip;
-    display: block;
 }
 .carousel-text-items__item-wrap > p {
     font-weight: 700;
@@ -709,6 +701,28 @@ button {
     -webkit-line-clamp: 7;
     -webkit-box-orient: vertical;
 }
+@media (hover: hover) {
+    .carousel-text-items__item-wrap:hover {
+        height: 100%;
+    }
+    .carousel-text-items__item-wrap:hover > p {
+        overflow: visible;
+        text-overflow: clip;
+        display: block;
+    }
+}
+
+
+.carousel-text-items__active {
+    height: 100%;
+    
+}
+.carousel-text-items__active > p {
+    overflow: visible;
+    text-overflow: clip;
+    display: block;
+}
+
 .carousel-text-items__item-wrap > span {
     margin-top: 15px;
     font-weight: 300;
@@ -745,6 +759,36 @@ button {
         width: 100%;
         scroll-snap-align: start;
     }
+}
+@media(max-width: 700px) {
+    .carousel-text-items__btn-previous {
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+    .carousel-text-items__btn-next {
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+}
+@media(max-width: 650px) {
+    .carousel-text-items > button {
+        width: 50px;
+        height: 50px;
+    }
+}
+@media(max-width: 450px) {
+    .carousel-text-items > button {
+        display: none;
+    }
+}
+.carousel-text-items__active {
+    min-height: 100%;
+    height: 100%;
+}
+.carousel-text-items__active p {
+    overflow: visible;
+    text-overflow: clip;
+    display: block;
 }
 
 /*---Questions---*/
